# 3D_Renderer_from_scratch

./: .gitignore  CMakeLists.txt  LICENSE.txt  Main.cpp  README.md  Shader.frag  input  objects  sfml-app  test.txt  tmp.py
data/: Shader.frag  input  objects
headers/: Application.hpp  Box.hpp  Camera.hpp  Figure.hpp  FileReader.hpp  KeyboardHandler.hpp  Settings.hpp  Sphere.hpp  Triangle.hpp  Window.hpp  World.hpp
source/: Application.cpp  Box.cpp  Camera.cpp  FileReader.cpp  KeyboardHandler.cpp  Settings.cpp  Sphere.cpp  Triangle.cpp  Window.cpp  World.cpp
